Adjusting parser in Social Media

--- a/Social Media.ipynb
+++ b/Social Media.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 26,
    "id": "b98b4330-22e1-4411-b781-f358a2264c33",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 28,
    "id": "2806960d-dd6c-4dc3-9597-76073a88e046",
    "metadata": {},
    "outputs": [
@@ -71,23 +71,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 30,
    "id": "b32b0da5-a7cd-4d34-bead-c98845da9b37",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Did you know? A staggering 75% of classroom-style training is forgotten if not put into practice within just 6 days. 💡\\n\\nTo combat this, Sodexo, a global leader in facilities management and food services, collaborated with CoachHub to accelerate their leadership development across the APMEA region. 🌏\\n\\nHere's what they achieved:\\n🚀 Implemented scalable coaching programs powered by AI and analytics\\n🌍 Successfully engaged and developed employees across diverse geographic regions\\n✨ Enhanced leadership skills and increased employee engagement across APMEA\\n🧠 Improved knowledge retention levels substantially\\n\\nJoin the ranks of successful coachees like Sodexo's Head of FMCG Accounts, Jean Baptiste CALEMARD, and embark on your own journey of growth and transformation. Let's #ExploreTheGreaterYou together. 👇\\nhttps://bit.ly/3LMxIHg\""
+       "\"Did you know that 75% of classroom-style training is forgotten if it's not implemented within 6 days? To overcome this challenge, Sodexo, a global leader in facilities management and food services, partnered with CoachHub to accelerate their leadership development across the APMEA region. \\n\\nHere's what they achieved:\\n🚀 Scalable coaching programs driven by AI and analytics, designed to effectively engage and develop employees across diverse geographic regions.\\n🌏 Improved knowledge retention, enhanced leadership skills, and increased employee engagement across the APMEA region.\\n🌟 Accessible, structured coaching sessions available 24/7, perfect for a hybrid, mobile workforce.\\n🧠 A significant boost in knowledge retention and engagement, thanks to global benchmarking.\\n✅ Rapid implementation with minimal administrative burden. \\n\\nJoin thousands of coachees like Sodexo's Head of FMCG Accounts, Jean Baptiste CALEMARD, on a journey of growth and transformation. Uncover your potential and #ExploreTheGreaterYou: https://bit.ly/3LMxIHg.\""
       ]
      },
-     "execution_count": 84,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "\n",
     "\n",
     "system_template = \"\"\"\n",
     "Write a professional social media post based on the following questionnaire answers. The post should be similar in tone and style to the given example.\n",
@@ -136,6 +138,8 @@
     "    \"hashtags\": \"#ExploreTheGreaterYou\\nhttps://bit.ly/3LMxIHg\",\n",
     "    \"tone\": \"professional and make sure to write the achievements in the form of points.\"\n",
     "}\n",
+    "\n",
+    "parser = StrOutputParser()\n",
     "\n",
     "chain = prompt_template | model | parser\n",
     "\n",
